.antlr/FlightParser.java
// Generated from d:/51450/Flight/Flight.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FlightParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMA=1, ESPACIO=2, LPAREN=3, RPAREN=4, RPUERTA=5, LPUERTA=6, DOSPUNTOS=7, 
		GUION=8, BARRA=9, ONTIME=10, DELAYED=11, CANCELLED=12, HORA=13, LETRA=14, 
		DIGITO=15, WS=16;
	public static final int
		RULE_vuelo = 0, RULE_codigo = 1, RULE_fecha = 2, RULE_estado = 3, RULE_aeropuertosalida = 4, 
		RULE_aeropuertoorigen = 5, RULE_asiento = 6, RULE_operador = 7, RULE_puerta = 8, 
		RULE_terminal = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"vuelo", "codigo", "fecha", "estado", "aeropuertosalida", "aeropuertoorigen", 
			"asiento", "operador", "puerta", "terminal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "' '", "'('", "')'", "'['", "']'", "':'", "'-'", "'/'", 
			"'ON_TIME'", "'DELAYED'", "'CANCELLED'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMA", "ESPACIO", "LPAREN", "RPAREN", "RPUERTA", "LPUERTA", "DOSPUNTOS", 
			"GUION", "BARRA", "ONTIME", "DELAYED", "CANCELLED", "HORA", "LETRA", 
			"DIGITO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Flight.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlightParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VueloContext extends ParserRuleContext {
		public CodigoContext codigo() {
			return getRuleContext(CodigoContext.class,0);
		}
		public AeropuertosalidaContext aeropuertosalida() {
			return getRuleContext(AeropuertosalidaContext.class,0);
		}
		public TerminalNode GUION() { return getToken(FlightParser.GUION, 0); }
		public AeropuertoorigenContext aeropuertoorigen() {
			return getRuleContext(AeropuertoorigenContext.class,0);
		}
		public TerminalNode HORA() { return getToken(FlightParser.HORA, 0); }
		public List<TerminalNode> ESPACIO() { return getTokens(FlightParser.ESPACIO); }
		public TerminalNode ESPACIO(int i) {
			return getToken(FlightParser.ESPACIO, i);
		}
		public VueloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vuelo; }
	}

	public final VueloContext vuelo() throws RecognitionException {
		VueloContext _localctx = new VueloContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_vuelo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			codigo();
			setState(22);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ESPACIO) {
				{
				setState(21);
				match(ESPACIO);
				}
			}

			setState(24);
			aeropuertosalida();
			setState(26);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ESPACIO) {
				{
				setState(25);
				match(ESPACIO);
				}
			}

			setState(28);
			match(GUION);
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ESPACIO) {
				{
				setState(29);
				match(ESPACIO);
				}
			}

			setState(32);
			aeropuertoorigen();
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ESPACIO) {
				{
				setState(33);
				match(ESPACIO);
				}
			}

			setState(36);
			match(HORA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodigoContext extends ParserRuleContext {
		public List<TerminalNode> LETRA() { return getTokens(FlightParser.LETRA); }
		public TerminalNode LETRA(int i) {
			return getToken(FlightParser.LETRA, i);
		}
		public List<TerminalNode> DIGITO() { return getTokens(FlightParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(FlightParser.DIGITO, i);
		}
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_codigo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(LETRA);
			setState(39);
			match(LETRA);
			setState(40);
			match(DIGITO);
			setState(41);
			match(DIGITO);
			setState(42);
			match(DIGITO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FechaContext extends ParserRuleContext {
		public List<TerminalNode> DIGITO() { return getTokens(FlightParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(FlightParser.DIGITO, i);
		}
		public List<TerminalNode> BARRA() { return getTokens(FlightParser.BARRA); }
		public TerminalNode BARRA(int i) {
			return getToken(FlightParser.BARRA, i);
		}
		public FechaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fecha; }
	}

	public final FechaContext fecha() throws RecognitionException {
		FechaContext _localctx = new FechaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fecha);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(DIGITO);
			setState(45);
			match(DIGITO);
			setState(46);
			match(BARRA);
			setState(47);
			match(DIGITO);
			setState(48);
			match(DIGITO);
			setState(49);
			match(BARRA);
			setState(50);
			match(DIGITO);
			setState(51);
			match(DIGITO);
			setState(52);
			match(DIGITO);
			setState(53);
			match(DIGITO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstadoContext extends ParserRuleContext {
		public TerminalNode ONTIME() { return getToken(FlightParser.ONTIME, 0); }
		public TerminalNode DELAYED() { return getToken(FlightParser.DELAYED, 0); }
		public TerminalNode CANCELLED() { return getToken(FlightParser.CANCELLED, 0); }
		public EstadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estado; }
	}

	public final EstadoContext estado() throws RecognitionException {
		EstadoContext _localctx = new EstadoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_estado);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7168L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AeropuertosalidaContext extends ParserRuleContext {
		public List<TerminalNode> LETRA() { return getTokens(FlightParser.LETRA); }
		public TerminalNode LETRA(int i) {
			return getToken(FlightParser.LETRA, i);
		}
		public AeropuertosalidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aeropuertosalida; }
	}

	public final AeropuertosalidaContext aeropuertosalida() throws RecognitionException {
		AeropuertosalidaContext _localctx = new AeropuertosalidaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_aeropuertosalida);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(LETRA);
			setState(58);
			match(LETRA);
			setState(59);
			match(LETRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AeropuertoorigenContext extends ParserRuleContext {
		public List<TerminalNode> LETRA() { return getTokens(FlightParser.LETRA); }
		public TerminalNode LETRA(int i) {
			return getToken(FlightParser.LETRA, i);
		}
		public AeropuertoorigenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aeropuertoorigen; }
	}

	public final AeropuertoorigenContext aeropuertoorigen() throws RecognitionException {
		AeropuertoorigenContext _localctx = new AeropuertoorigenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_aeropuertoorigen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(LETRA);
			setState(62);
			match(LETRA);
			setState(63);
			match(LETRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsientoContext extends ParserRuleContext {
		public TerminalNode LETRA() { return getToken(FlightParser.LETRA, 0); }
		public List<TerminalNode> DIGITO() { return getTokens(FlightParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(FlightParser.DIGITO, i);
		}
		public AsientoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asiento; }
	}

	public final AsientoContext asiento() throws RecognitionException {
		AsientoContext _localctx = new AsientoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_asiento);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(LETRA);
			setState(66);
			match(DIGITO);
			setState(67);
			match(DIGITO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperadorContext extends ParserRuleContext {
		public List<TerminalNode> LETRA() { return getTokens(FlightParser.LETRA); }
		public TerminalNode LETRA(int i) {
			return getToken(FlightParser.LETRA, i);
		}
		public List<TerminalNode> ESPACIO() { return getTokens(FlightParser.ESPACIO); }
		public TerminalNode ESPACIO(int i) {
			return getToken(FlightParser.ESPACIO, i);
		}
		public OperadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operador; }
	}

	public final OperadorContext operador() throws RecognitionException {
		OperadorContext _localctx = new OperadorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operador);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(LETRA);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESPACIO || _la==LETRA) {
				{
				{
				setState(70);
				_la = _input.LA(1);
				if ( !(_la==ESPACIO || _la==LETRA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PuertaContext extends ParserRuleContext {
		public TerminalNode LETRA() { return getToken(FlightParser.LETRA, 0); }
		public List<TerminalNode> DIGITO() { return getTokens(FlightParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(FlightParser.DIGITO, i);
		}
		public PuertaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puerta; }
	}

	public final PuertaContext puerta() throws RecognitionException {
		PuertaContext _localctx = new PuertaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_puerta);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(LETRA);
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				match(DIGITO);
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGITO );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminalContext extends ParserRuleContext {
		public TerminalNode DIGITO() { return getToken(FlightParser.DIGITO, 0); }
		public TerminalNode LETRA() { return getToken(FlightParser.LETRA, 0); }
		public TerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminal; }
	}

	public final TerminalContext terminal() throws RecognitionException {
		TerminalContext _localctx = new TerminalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_terminal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_la = _input.LA(1);
			if ( !(_la==LETRA || _la==DIGITO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}